# token-2022-solana-spl

./: Cargo.toml  package-lock.json
clients/cli/: Cargo.toml
clients/rust/: Cargo.toml
clients/rust/src/: generated.rs
confidential-transfer/ciphertext-arithmetic/: Cargo.toml
confidential-transfer/elgamal-registry/: Cargo.toml
confidential-transfer/proof-extraction/: Cargo.toml
confidential-transfer/proof-generation/: Cargo.toml
confidential-transfer/proof-tests/: Cargo.toml
program/: Cargo.toml
