[package]
name = "spl-token-2022"
version = "8.0.1"
description = "Solana Program Library Token 2022"
documentation = "https://docs.rs/spl-token-2022"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["dep:serde", "dep:serde_with", "dep:base64", "spl-pod/serde-traits"]
default = ["zk-ops"]
# Remove this feature once the underlying syscalls are released on all networks
zk-ops = []

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.22.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.3"
solana-account-info = "*"
solana-clock = "*"
solana-cpi = "*"
solana-decode-error = "*"
solana-instruction = "*"
solana-msg = "*"
solana-native-token = "*"
solana-program-entrypoint = "*"
solana-program-error = "*"
solana-program-memory = "*"
solana-program-option = "*"
solana-program-pack = "*"
solana-pubkey = "*"
solana-rent = "*"
solana-sdk-ids = "*"
solana-security-txt = "1.1.1"
solana-sysvar = "*"
solana-system-interface = "1.0.0"
solana-zk-sdk = "*"
spl-elgamal-registry = { version = "0.2.0", path = "../confidential-transfer/elgamal-registry", features = ["no-entrypoint"] }
spl-memo = { version = "6.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-token-confidential-transfer-ciphertext-arithmetic = { version = "0.3.0", path = "../confidential-transfer/ciphertext-arithmetic" }
spl-token-confidential-transfer-proof-extraction = { version = "0.3.0", path = "../confidential-transfer/proof-extraction" }
spl-token-group-interface = { version = "0.6.0" }
spl-token-metadata-interface = { version = "0.7.0" }
spl-transfer-hook-interface = { version = "0.10.0" }
spl-type-length-value = { version = "0.8.0" }
spl-pod = { version = "0.5.1" }
thiserror = "2.0"
serde = { version = "1.0.219", optional = true }
serde_with = { version = "3.12.0", optional = true }
base64 = { version = "0.22.1", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
spl-token-confidential-transfer-proof-generation = { version = "0.4.0", path = "../confidential-transfer/proof-generation" }

[dev-dependencies]
lazy_static = "1.5.0"
proptest = "1.6"
serial_test = "3.2.0"
solana-account = "*"
solana-hash = "*"
solana-keypair = "*"
solana-program-test = "*"
solana-signer = "*"
solana-transaction = "*"
solana-transaction-error = "*"
spl-tlv-account-resolution = { version = "0.10.0" }
serde_json = "1.0.140"
test-case = "3.3.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.solana]
program-id = "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
