[package]
name = "spl-token-cli"
version = "5.1.0"
description = "SPL-Token Command-line Utility"
documentation = "https://docs.rs/spl-token-cli"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]
walkdir = "2"

[dependencies]
base64 = "0.22.1"
clap = "3.2.23"
console = "0.15.11"
futures = "0.3"
serde = "1.0.219"
serde_derive = "1.0.103"
serde_json = "1.0.140"
solana-account-decoder = "*"
solana-clap-v3-utils = "*"
solana-cli-config = "*"
solana-cli-output = "*"
solana-client = "*"
solana-logger = "*"
solana-remote-wallet = "*"
solana-sdk = "*"
solana-transaction-status = "*"
spl-associated-token-account-client = { version = "2.0.0" }
spl-token = { version = "8.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", path = "../../program", features = ["no-entrypoint"] }
spl-token-client = { version = "0.14.0", path = "../rust-legacy" }
spl-token-confidential-transfer-proof-generation = { version = "*", path = "../../confidential-transfer/proof-generation" }
spl-token-metadata-interface = { version = "0.7.0" }
spl-token-group-interface = { version = "0.6.0" }
spl-memo = { version = "6.0", features = ["no-entrypoint"] }
strum = "0.27"
strum_macros = "0.27"
tokio = "1"

[dev-dependencies]
solana-test-validator = "*"
assert_cmd = "2.0.17"
libtest-mimic = "0.8"
serial_test = "3.2.0"
tempfile = "3.19.1"

[[bin]]
name = "spl-token"
path = "src/main.rs"

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
