[package]
name = "spl-token-confidential-transfer-ciphertext-arithmetic"
version = "0.3.0"
description = "Solana Program Library Confidential Transfer Ciphertext Arithmetic"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = "0.22.1"
bytemuck = "1.22.0"
solana-curve25519 = "*"
solana-zk-sdk = "*"

[dev-dependencies]
spl-token-confidential-transfer-proof-generation = { version = "*", path = "../proof-generation" }
curve25519-dalek = "*"
