[package]
name = "spl-elgamal-registry"
version = "0.2.0"
description = "Solana ElGamal Registry Program"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
solana-account-info = "*"
solana-cpi = "*"
solana-instruction = "*"
solana-msg = "*"
solana-program-entrypoint = "*"
solana-program-error = "*"
solana-pubkey = { version = "*", features = ["curve25519"] }
solana-rent = "*"
solana-sdk-ids = "*"
solana-security-txt = "1.1.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
solana-sysvar = { version = "*", features = ["bincode"] }
solana-zk-sdk = "*"
spl-pod = "0.5.1"
spl-token-confidential-transfer-proof-extraction = { version = "0.3.0", path = "../proof-extraction" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "regVYJW7tcT8zipN5YiBvHsvR5jXW1uLFxaHSbugABg"

[lints]
workspace = true
