[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.3.0"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.22.0"
solana-account-info = "*"
solana-curve25519 = "*"
solana-instruction = "*"
solana-instructions-sysvar = "*"
solana-msg = "*"
solana-program-error = "*"
solana-pubkey = "*"
solana-sdk-ids = "*"
solana-zk-sdk = "*"
spl-pod = "*"
thiserror = "2.0.12"
